<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_add"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:titleTextColor="?attr/colorOnPrimary"
        android:elevation="4dp"
        app:layout_constraintTop_toTopOf="parent"
        android:theme="@style/Theme.Mareu" />

    <Spinner
        android:id="@+id/add_reunion_room"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/input_margin"
        app:layout_constraintTop_toBottomOf="@id/toolbar_add" />

    <EditText
        android:id="@+id/add_reunion_subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/input_margin"
        app:layout_constraintTop_toBottomOf="@id/add_reunion_room"
        android:hint="@string/subject_hint"/>

    <EditText
        android:id="@+id/add_reunion_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/input_margin"
        app:layout_constraintTop_toBottomOf="@id/add_reunion_subject"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:clickable="true"
        android:hint="@string/time_hint" />

    <EditText
        android:id="@+id/add_reunion_attendees"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/input_margin"
        app:layout_constraintTop_toBottomOf="@id/add_reunion_time"
        android:hint="@string/attendee_hint"/>

    <Button
        android:id="@+id/add_reunion_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/input_margin"
        app:layout_constraintTop_toBottomOf="@id/add_reunion_attendees"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/add_reunion_button"/>

</androidx.constraintlayout.widget.ConstraintLayout>