<?xml version="1.0" encoding="utf-8"?>
<androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/reunion_fragment_list"
    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
    tools:context=".ui.ListReunionActivity"
    tools:listitem="@layout/row_reunion"
    android:paddingBottom="@dimen/list_margin"
    android:clipToPadding="false"
    android:layout_width="match_parent"
    android:layout_height="match_parent" />