<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_list_reunion"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ListReunionActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_list"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:titleTextColor="?attr/colorOnPrimary"
        android:elevation="4dp"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container_view"
        app:layout_constraintTop_toBottomOf="@id/toolbar_list"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp">

    </androidx.fragment.app.FragmentContainerView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_reunion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="@dimen/fab_margin"
        android:layout_marginEnd="@dimen/fab_margin"
        android:src="@drawable/ic_baseline_add_24"/>

</androidx.constraintlayout.widget.ConstraintLayout>